--- a/app/explorer/templates/explorer/challenge-submitted.html
+++ b/app/explorer/templates/explorer/challenge-submitted.html
@@ -34,12 +34,12 @@
               <!-- Activity 3 -->
               <div class="icon-text">
                 <span class="icon green is-large">
-                  <i class="fas fa-paint-brush fa-2x"></i>
+                  <i class="fas fa-camera-movie fa-2x"></i>
                 </span>
-                <span class="is-size-3">Activity 3</span>
+                <span class="is-size-3"><a href="/videos/" target="_blank">Serol Movies</a></span>
               </div>
               <p class="block">
-                This is some placeholder text until we decide on the actual activity we will showcase here.
+                We have 4 movies starring Serol which explore robotic telescopes, the life of exploding stars and Solar Sytem mysteries.
               </p>
             </div>
           </div>
