--- a/app/explorer/templates/explorer/login.html
+++ b/app/explorer/templates/explorer/login.html
@@ -63,7 +63,7 @@
             <button class="button is-link is-light">Cancel</button>
           </div>
         </div>
-        <p class="small">By logging in, you agree to <a href="http://lco.global/observatory/termsofuse" target="_blank">the Las Cumbres Observatory terms of use</a>.</p>
+        <p class="small">By logging in, you agree to <a href="https://lco.global/observatory/termsofservice/" target="_blank">the Las Cumbres Observatory terms of use</a>.</p>
         <p>
           <a href="{% url 'password_reset' %}">Forgot your password?</a>
         </p>
