--- a/app/stickers/templates/stickers/sticker_list.html
+++ b/app/stickers/templates/stickers/sticker_list.html
@@ -18,7 +18,7 @@
           <img class="img-fluid rounded" src="{% static icon_url %}"  alt="Mission {{progress.mission.number}} patch">
           <h2>Mission {{progress.mission.number}}: {{progress.mission.name}}</h2>
           {% if request.user|user_mission_state:progress.mission.number %}
-          <a href="{% url 'challenge-next' progress.mission.number %}" class="button colour-option-{{progress.mission.number}}">{% trans "start a new challenge?" %}</a>
+          <a href="{% url 'challenge-next' progress.mission.number %}" class="button mission-{{progress.mission.number}}-colour">{% trans "start a new challenge?" %}</a>
           {% else %}
           <p class="p-3 mb-2 bg-grey text-white" id="mission-btn-{{mission.number}}"><i class="far fa-lock-alt"></i> {% trans "Complete Mission 1 to unlock" %}</p>
           {% endif %}
@@ -32,9 +32,7 @@
               {% if challenge.complete %}
               <a href="{% url 'summary' challenge.challenge.id %}">
                 <img src="{% if challenge.image %}{{ challenge.image.url|safe }}{% else %}{% static 'explorer/images/placeholder2.png' %}{% endif %}" />
-                {% with "explorer/"|add:challenge.sticker as icon_url %}
-                <img src="{% static icon_url %}" class="sticker-over-image" />
-                {% endwith%}
+                <img src="{{challenge.sticker}}" class="sticker-over-image" />
               </a>
               {% else %}
               <img src="{% static 'explorer/images/placeholder2.png' %}" />
