New serol animations; Obs portal API schema change

--- a/app/explorer/templates/explorer/base.html
+++ b/app/explorer/templates/explorer/base.html
@@ -26,6 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Aldrich" rel="stylesheet">
 
     <link href="{% static "explorer/css/serol-styles.css" %}" rel="stylesheet">
+    {% block extracss%}{% endblock %}
   </head>
 
   <body  class="{% block mission-class %}{%endblock%}">
