--- a/app/explorer/templates/explorer/project_complete.html
+++ b/app/explorer/templates/explorer/project_complete.html
@@ -5,31 +5,25 @@
 
 {% block mission-class %}{%endblock%}
 
-{% block main-content %}
-<div class="container">
-    <div class="row">
-      <div class="col-12">
+{% block main-body %}
+    <div class="container">
         <h1>{% trans "Project Complete!" %}</h1>
-        <div id="celebration-serol"></div>
-      </div>
+        <div id="celebrationserol"></div>
     </div>
-    <div class="row">
-      <div class="col-12">
+    <div class="container">
           <p class="statement">{% trans "You have reached the end of Serol's Cosmic Explorer missions!" %}</p>
           <p class="statement">{% trans "Have a look back at all of your" %} <a href="{% url 'stickers' %}">{% trans "challenges and cosmic pictures!" %}</a> </p>
-        </div>
       </div>
     </div>
 </div>
 {% endblock %}
+
 {% block script-content %}
 <script src="{% static "explorer/js/utils.js" %}"  type="text/javascript" ></script>
-<script src="{% static "explorer/js/lottie.js" %}"  type="text/javascript" ></script>
 <script>
 
-var anim;
 var animData = {
-    container: document.getElementById('celebration-serol'),
+    container: document.getElementById('celebrationserol'),
     renderer: 'svg',
     loop: true,
     autoplay: true,
@@ -37,9 +31,10 @@ var animData = {
     rendererSettings: {
         progressiveLoad:false
     },
-    path: '{% static "explorer/js/project_complete.json" %}'
+    path: '{% static "explorer/js/projectcomplete.json" %}'
 };
-anim = lottie.loadAnimation(animData);
+
+var serolanim = lottie.loadAnimation(animData);
 
 </script>
 {% endblock%}
